  function is deprecated in PHP 8.0.
#3200714 by DiegoPino, pdcarto, azovsky, felixoe, DamienMcKenna:
  Incompatibility with s3fs.
#3186638 by bgilhome, DamienMcKenna: Schema for plugin 'config' keys.
#3186656 by fgm, DamienMcKenna: Use state API instead of custom KV collection
  for last run.
#3210689 by DamienMcKenna, MichaelvonB: Can't restore backups.


Backup and Migrate 5.0.0-rc2, 2020-09-28
----------------------------------------
#3158790 by devad, raman.b, karolus, robcarr, DamienMcKenna, endless_wander,
  Bagz, jhnnsbstnbch, abdul_azeez_drusys, celia_ccs: Unable to add schedules and
  profiles.
#3169301 by devad, snehalgaikwad, DamienMcKenna: Unable to add backup source.
#3173623 by DamienMcKenna: Add test coverage for running a backup through cron
  in the UI.
#3164263 by devad, DamienMcKenna, bigmonmulgrew: Incompatible PluginManager
  ::call() declaration.
#3173582 by DamienMcKenna: Replace BACKUP_MIGRATE_MODULE_VERSION constant with
  the module's actual version.
#3154715 by DamienMcKenna, xmacinfo: Add an update script to clear the caches
  for upgrading to 5.0.x.


Backup and Migrate 5.0.0-rc1, 2020-06-12
----------------------------------------
#3051092 by DamienMcKenna, vuil, rpayanm, waverate: Drupal 9 compatibility.
#3065017 by DamienMcKenna, dercheffe, Promo-IL: Restore emoji unicode characters
  not possible.
#3143651 by DamienMcKenna: Ignore cache_page by default.
#3143652 by DamienMcKenna: Coding standards improvements.
#3143652 by DamienMcKenna: Rename class methods that start with an underscore.
#3124193 by vsujeetkumar, DamienMcKenna, Neslee Canil Pinto: t() calls should be
  avoided in classes.
#3159638 by DamienMcKenna, endless_wander, snehalgaikwad, kvantstudio,
  naresh_bavaskar: Error when saving destination.


Backup and Migrate 8.x-4.x-dev, xxxx-xx-xx
------------------------------------------
#3121797 by paulocs, thalles, RenatoG, Neslee Canil Pinto: Update support.source
  link in composer.json.